--- a/PIN/style.css
+++ b/PIN/style.css
@@ -12,24 +12,25 @@
     scroll-behavior: smooth;
 }
   body {
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    /* align-items: center;*/
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-  
+  min-height: 100vh;
+  display: flex;
+   /* align-items: center;*/
+  justify-content: center;
+  background: #000000;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background: #000000;
+  /*align-items: center;*/
 }
 
 header {
-  background-color: #000000;
+  background-color: #232323;
   width: 100%;
   height: 100%;
-  flex-direction: column;
+ flex-direction: column;
   display: flex;
   align-items: center; 
  }
@@ -46,6 +47,7 @@ nav{
 label.logo img{
   height: 100px;
   padding: 15px 100px 10px;
+  text-decoration: none;
 }
 nav ul{
   float: right;
@@ -81,10 +83,10 @@ a.active,a:hover{
   display: none;
 }
 @media (max-width: 952px){
-    label.logo img{
-      height: 75px;
-      padding:15px 25px 10px;
-    }
+  label.logo{
+    font-size: 30px;
+    padding-left: 50px;
+  }
   nav ul li a{
     font-size: 16px;
   }
@@ -166,9 +168,11 @@ a.active,a:hover{
     margin: 0 10px;
     cursor: pointer;
   }
+  /* javascript */
   .active, .dot:hover{
     border-color: #575757; 
   }
+  /* muslide add fade */
   .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
@@ -271,8 +275,6 @@ a.active,a:hover{
   }
   
 /*Accordion***********************************************************************************************/
-
-
   section {
     display: flex;
     flex-direction: column;
@@ -281,29 +283,30 @@ a.active,a:hover{
     width: 100%;
     min-height: 100vh;
     position: relative;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(23, 23, 23);
   }
   .texto {
     position: absolute;
-    top:100px;
+    top: 15%;
     left: 25%;
     transform: translateX(-50%);
     text-align: left;
     color: #ffffff;
     z-index: 5;
-    margin: 10px 0px 0px;
+    margin: 50px 0px;
     font-size: 18px;
   }
-  section .video {
+
+  
+  .imagen {
     display: flex;
-    width: 600px;
-    height: 400px;
+    width: 1000px;
+    height: 600px;
     position: relative;
-    left: calc(50% + 200px);
-    transform: translateX(-50%);
-    object-fit: cover;
-    align-self: center;
+    margin: 0 auto;
+    margin-left: 400px;
   }
+  
   .accordion {
     position: absolute;
     max-width: 530px;
@@ -313,11 +316,10 @@ a.active,a:hover{
     border-radius: 0px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
     z-index: 3;
-    top: 200px; /* Ajuste para posicionar desde la parte superior */
-    left: calc(50% + -250px); 
-    transform: translateX(-50%);
+    margin: 200px 100px;
   }
   
+ 
   .accordion .accordion-content {
     margin: 10px 0;
     border-radius: 0px;
@@ -325,9 +327,11 @@ a.active,a:hover{
     border-bottom: 1px solid #ffffff;
     overflow: hidden;
   }
+  
   .accordion-content.open {
     padding-bottom: 10px;
   }
+  
   .accordion-content h1 {
     display: flex;
     min-height: 50px;
@@ -337,18 +341,22 @@ a.active,a:hover{
     justify-content: space-between;
     transition: all 0.2s linear;
   }
+  
   .accordion-content.open h1 {
     min-height: 35px;
   }
+  
   .accordion-content h1 .title {
     font-size: 15px;
     font-weight: 500;
     color: #ffffff;
   }
+  
   .accordion-content h1 i {
     font-size: 15px;
     color: #ffffff;
   }
+  
   .accordion-content .description {
     height: 0;
     font-size: 12px;
@@ -358,30 +366,9 @@ a.active,a:hover{
     transition: all 0.2s linear;
   }
 
-  /*Reserva*************************************************************************************************/
+  /*reserva*************************************************************************************************/
 
-  .video-container {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-  }
-  
-  video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .content {
-    position: relative;
-    z-index: 0;
-    /* Estilos para el contenido del elemento */
-  }
-  
+
   .container {
     width: 100%;
     display: flex;
@@ -389,9 +376,28 @@ a.active,a:hover{
     justify-content: center;
     margin-top: 80px;
   }
+  /*
+  .container .contact_data {
+    background: #00000094;
+    border-radius: 02px;
+    border: 01px solid #ffffff00;
+  }
+  .container .contact_data form input,
+  textarea, select {
+    margin: 0px 10px 0px 40px;
+    width: 80%;
+    padding: 8px;
+    border: 1px solid #ffffff;
+    font-size: 10px;
+    color: #313131;
+    border-radius: 05px;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    }
+*/
+
     .container .contact_data {
-      position: absolute;
-      width: 380px;
       background: #00000094;
       border-radius: 2px;
       border: 1px solid #ffffff00;
@@ -399,16 +405,14 @@ a.active,a:hover{
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      margin-top: 20px;
-      margin-right: 450px;
-      align-items: flex-start;
-      z-index: 6;
+      margin: 0 10px; /* Agregamos el margen de 10px en los lados */
     }
+    
     .container .contact_data form input,
     .container .contact_data textarea,
     .container .contact_data select {
-      margin: 50px  30px 50px 30px;
-      width: 320px;
+      margin: 20px;
+      width: 80%;
       padding: 8px;
       border: 1px solid #ffffff;
       font-size: 10px;
@@ -419,22 +423,22 @@ a.active,a:hover{
       margin-bottom: 15px;
     }
 
+    
+
+
+  
   .container .contact_data h2 {
-    clear: both;
-    float: left;
-    position: relative;
     color: #ffffff;
-    margin-left:30px ;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 5px 50px 10px 0px;
     border-bottom: 5px #454545 solid;
-    z-index: 7;
+    text-align: left;
   }
+
   .container .contact_data button {
     margin: 20px 40px;
     border: none;
     padding: 10px 20px;
-    background: #ffffff;
+    background: #4d4d4d;
     font-size: 15px;
     border-radius: 05px;
     cursor: pointer;
@@ -445,32 +449,20 @@ a.active,a:hover{
     transition: 0.3s;
     color: #000000;
   }
-  .contact_data #success-popup {
+
+  .success-message {
     display: none;
-    position: fixed;
-    top: 75%;
-    left: 32%;
-    transform: translate(-50%, -50%);
-    background-color: #0000007e;
-    color: #ffffff;
-    padding: 20px;
-    border-radius: 5px;
-    z-index: 9;
+    color: rgb(128, 0, 0);
+    font-weight: bold;
+    margin-top: 10px;
   }
   
-  .container .contact_data #success-popup.show {
-    display: block;
-  }
   .container .contact_data2 {
     background: #00000094;
     border-radius: 02px;
     border: 01px solid rgba(255, 255, 255, 0);
     width: 400px;
     margin: 0 10px;
-    position: absolute;
-    z-index: 8;
-    margin-top: 20px;
-    margin-left: 450px;
   }
   .container .contact_data2 ul {
     list-style: none;
